--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,19 @@
 streamlit
 pandas
-openpyxl
-jinja2
+google-auth
 google-auth-oauthlib
 google-auth-httplib2
 google-api-python-client
 numpy
-weasyprint
-requests>=2.28.0
+openpyxl
+zipfile
+jinja2
+json
+datetime
+os
+BytesIO
+Font
+PatternFill
+Alignment
+Border
+Side
