--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,22 @@
-streamlit
-pandas
-numpy
-openpyxl
-jinja2
-python-dateutil
-pdfkit
-et-xmlfile
-pytz
-tzdata
+# Main dependencies
+streamlit==1.32.0
+pandas==2.2.0
+numpy==1.26.4
+openpyxl==3.1.2
+Jinja2==3.1.3
+python-dateutil==2.8.2
+weasyprint==60.2
+
+# Excel handling
+et-xmlfile==1.1.0  # Required by openpyxl
+
+# Data processing
+pytz==2024.1  # Required by pandas
+tzdata==2024.1  # Required by pandas
+
+# PDF generation
+# Note: wkhtmltopdf must be installed separately:
+# - macOS: brew install wkhtmltopdf
+# - Windows: Download from https://wkhtmltopdf.org/downloads.html
+# - Linux: sudo apt-get install wkhtmltopdf
+
