--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit==1.32.0
-pandas==2.2.0
-numpy==1.26.4
-openpyxl==3.1.2
-Jinja2==3.1.3
-python-dateutil==2.8.2
-weasyprint==60.2
+streamlit
+pandas
+numpy
+openpyxl
+Jinja2
+python-dateutil
+weasyprint
